<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    tools:context=".SecondActivity">

...
        android:id="@+id/location_IL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/primaryColor">

        <EditText
            android:id="@+id/location_ET"
            style="@style/bigTextView"
            android:inputType="text"
            android:maxLength="30"
            android:layout_marginTop="15dp"
            android:text="TextView"    />

...
